Itermidiate Commit of working code

--- a/BookFlights/BookFlights/ClientApp/src/app/book-flight/book-flight.component.html
+++ b/BookFlights/BookFlights/ClientApp/src/app/book-flight/book-flight.component.html
@@ -34,6 +34,7 @@
 
             <i class="fas fa-inr">{{flight.price}}</i>
             <br />
+            <h6>Number of Seats</h6>
             <input type="number" class="form-control" id="numberOfSeats" name="numberOfSeats"
                    placeholder="Number Of Seats"/>
             <a [routerLink]="['/book-flight',flight.id]" class="btn btn-secondary btn-lg mt-2">
