Added register passenger funationality

--- a/BookFlights/BookFlights/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/BookFlights/BookFlights/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -26,8 +26,8 @@
             [routerLinkActiveOptions]="{ exact: true }"
           >
             
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
+            <a class="nav-link text-dark" [routerLink]="['/register-passenger']"
+              >Register</a
             >
           </li>
         </ul>
